# so3lr

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: evaluate_so3lr_on_dataset.ipynb  npt_jaxmd.ipynb  nvt_jaxmd.ipynb  nvt_md_trajectory.xyz  production_run.ipynb
examples/data/: ala15_folded.xyz  ethanol.npz
examples/hdf5/: trajectory.hdf5
scripts/: so3lr_eval.py
so3lr/: __init__.py  ascii_string.py  ase_utils.py  base_calcuator.py  base_calculator.py  cli.py  graph.py  jaxmd_utils.py  jraph_utils.py  potential.py  prepare_dimer_xyz.py
so3lr/cli/: eval_so3lr.py  md_settings.md  md_settings.yaml  md_so3lr.py  so3lr_cli.py  so3lr_eval.py  so3lr_finetune.py  so3lr_md.py  tune_ewald.py
so3lr/config/: finetune.yaml
so3lr/params/: hyperparameters.json  hyperparameters.yaml
so3lr/params/checkpoints/ckpt_5150000/metrics/: metrics
so3lr/params/checkpoints/ckpt_5150000/params/: manifest.ocdbt
solar/: __init__.py  ase_utils.py  jaxmd_utils.py  potential.py
solar/params/: hyperparameters.json  hyperparameters.yaml  params.pkl
solar/params/checkpoints/ckpt_5050000/metrics/: metrics
solar/params/checkpoints/ckpt_5050000/params/: manifest.ocdbt
solar/params/checkpoints/ckpt_5050000/params/ocdbt.process_0/: manifest.ocdbt
solar/params/checkpoints/ckpt_5150000/params/ocdbt.process_0/: manifest.ocdbt
sup_gems/: __init__.py  ase_utils.py  graph.py  jaxmd_utils.py  potential.py
sup_gems/sup_gems_params/checkpoints/ckpt_5050000/params/: _METADATA  checkpoint
tests/: test_ase.py  test_jaxmd.py  test_potential.py  test_readme.py
tests/test_data/: atat.xyz  atat_ase.npz  atat_jaxmd.npz  atat_jaxmd_old.npz  bb.xyz  bb_ase.npz  bb_ase_old.npz  bb_jaxmd.npz  bb_jaxmd_old.npz  dha.xyz  dha_ase.npz  dha_ase_old.npz  dha_jaxmd.npz  dha_jaxmd_old.npz  water_64.xyz  water_ase.npz  water_jaxmd.npz  water_jaxmd_old.npz
