[tool.poetry]
name = "so3lr"
version = "0.0.1"
description = "SO3krates Universal Pairwise Force Field with Long Range Interactions (SO3LR) for Molecular Simulation"
authors = ["Adil Kabylda, Thorben Frank"]
license = "MIT"


[tool.poetry.dependencies]
python = ">=3.12"
numpy = "*"
ase = "*"
h5py = "*"
jax = "==0.5.3"
jaxlib = "==0.5.3"
setuptools = "<81"
mlff = { git = "https://github.com/kabylda/mlff.git", branch = "v1.0-tfds-pme", optional = false }
jraph = { git = "https://github.com/kabylda/jraph.git", branch = "master", optional = false }
jax-md = { git = "https://github.com/kabylda/jax-md.git", branch = "main" , optional = false }
glp = { git = "https://github.com/kabylda/glp.git", branch = "electrostatics_neighbourlist", optional = false }
jax-pme = { git = "https://github.com/lab-cosmo/jax-pme", branch = "main" , optional = false }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
so3lr = "so3lr.cli.so3lr_cli:main"
